# Sokoban-solver

./: .gitignore  README.md  build_and_deploy_rust.sh  run.sh  rust_solver
docs/: demo.mov
maps/: 6boxes1.txt  8boxes4.txt  level3.txt
rust_solver_source/: Cargo.toml
rust_solver_source/rust_solver_temp/: Cargo.toml
rust_solver_source/rust_solver_temp/src/: main.rs
rust_solver_source/src/: main.rs
src/solver/: SokoBot.java
