[package]
name = "rust_solver"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "2.0"
smallvec = "1.13"
arrayvec = "0.7"
rayon = "1.10"
parking_lot = "0.12"
memchr = "2.7"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
overflow-checks = false
debug-assertions = false

[profile.release.build-override]
opt-level = 3
